--- a/app/templates/app/addpost.html
+++ b/app/templates/app/addpost.html
@@ -12,7 +12,7 @@
           </div>
         <div class="mb-3">
           <label for="id_content" class="form-label">Content</label>
-          <textarea class="form-control" id="id_content" required="" name="content" rows=1ddd0 style="max-height: 300px;min-height: 150px;"> </textarea>
+          <textarea class="form-control" id="id_content" required="" name="content"  style="max-height: 300px;min-height: 150px;"> </textarea>
         </div>
         <div class="mb-3">
           <label for="id_file" class="form-label">Files</label>
