--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -52,7 +52,7 @@ Home
                     <img src="/app${object["pfp_url"]}" alt="Profile" width="40" height="40" class="rounded-circle me-2">
                     <div>
                         <!--Username-->
-                        <div class="fw-bold">${object["user"]}</div>
+                        <a class="fw-bold text-body text-decoration-none" href="/app/userprofile/${object["user"]}">${object["user"]}</a>
                     </div>
                 </div>
                 <!--Heading-->
