--- a/app/templates/app/basic.html
+++ b/app/templates/app/basic.html
@@ -21,22 +21,29 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              {% if user.is_authenticated %}
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'addpost'%}">Add a post</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'userp'%}">User Profile</a></li>
+                <a class="nav-link" href="{% url 'createevent'%}">Create Event</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'userp' request.user.username %}">User Profile</a></li>
                 {% else %}
                 <a class="nav-link" href="{% url 'login_user'%}">Login</a></li>
                 {% endif %}
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'events'%}">Browse Events</a></li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Settings
                 </a>
                 <ul class="dropdown-menu">
-                  {% if user.is_authenticated %}
+                  {% if request.user.is_authenticated %}
+                  <li><a class="dropdown-item" href="{% url 'myposts'%}">My posts</a></li>
+                  <li><a class="dropdown-item" href="{% url 'myevents'%}">My Events</a></li>
                   <li><a class="dropdown-item" href="{% url 'logout_user'%}">Logout</a></li>
                   {% else %}
                   <a class="nav-link" href="{% url 'login_user'%}">Login</a></li>
