--- a/app/templates/app/posts.html
+++ b/app/templates/app/posts.html
@@ -30,7 +30,7 @@
                         <img src="/app${data.pfp}" alt="Profile" width="40" height="40" class="rounded-circle me-2">
                         <div>
                             <!--Username-->
-                            <div class="fw-bold">${data.username}</div>
+                            <a class="fw-bold text-body text-decoration-none" href="/app/userprofile/${data.username}">${data.username}</a>
                         </div>
                     </div>
                     ${data.content}
@@ -49,7 +49,7 @@
                 <img src="/app{{post.user.userprofile.pfp.url}}" alt="Profile" width="40" height="40" class="rounded-circle me-2">
                 <div>
                     <!--Username-->
-                    <div class="fw-bold">{{post.user}}</div>
+                    <a class="fw-bold text-body text-decoration-none" href="{%url 'userp' post.user %}">{{post.user}}</a>
                 </div>
             </div>
             <!--Heading-->
@@ -81,7 +81,7 @@
     <!--Display an image as the icon-->
     
     {% if user.is_authenticated%}
-    <div class="container col-lg-6 border ms-0 m-3">
+    <div class="container col-lg-6 border m-3">
         <form onsubmit="submitComment(event)" id="commentform">
             {% csrf_token %}
             <div class="mb-3 align">
@@ -104,7 +104,7 @@
                 <img src="/app{{i.user.userprofile.pfp.url}}" alt="Profile" width="40" height="40" class="rounded-circle me-2">
                 <div>
                     <!--Username-->
-                    <div class="fw-bold">{{i.user}}</div>
+                    <a class="fw-bold text-body text-decoration-none" href="{%url 'userp' i.user %}">{{i.user}}</a>
                 </div>
             </div>
             {{i.content}}
